--- a/package.json
+++ b/package.json
@@ -10,11 +10,8 @@
   },
   "dependencies": {
     "next": "13.4.12",
-    "plotly": "^1.0.6",
-    "plotly.js": "^2.25.2",
-    "plotly.js-dist": "^2.25.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-plotly.js": "^2.6.0"
+    "recharts": "^2.7.3"
   }
 }
